--- a/app/src/main/res/layout/fragment_add.xml
+++ b/app/src/main/res/layout/fragment_add.xml
@@ -69,10 +69,12 @@
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/editTextAmount"
                     android:layout_width="wrap_content"
-                    android:ems="20"
                     android:layout_height="48dp"
+                    android:ems="20"
                     android:hint="@string/hint_amount"
                     android:inputType="number"
+                    android:digits="0123456789."
+
                     android:maxLength="32"
                     android:singleLine="true" />
             </LinearLayout>
@@ -124,9 +126,9 @@
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/editTextDate"
                 android:layout_width="wrap_content"
-                android:ems="20"
                 android:layout_height="48dp"
                 android:layout_marginTop="8dp"
+                android:ems="20"
                 android:focusable="false"
                 android:hint="@string/hint_set_date"
                 android:inputType="date"
@@ -137,9 +139,9 @@
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/editTextTime"
                 android:layout_width="wrap_content"
-                android:ems="20"
                 android:layout_height="48dp"
                 android:layout_marginTop="8dp"
+                android:ems="20"
                 android:focusable="false"
                 android:hint="@string/hint_set_time"
                 android:inputType="time"
