--- a/app/src/main/res/layout/fragment_transactions.xml
+++ b/app/src/main/res/layout/fragment_transactions.xml
@@ -34,5 +34,11 @@
         app:layout_constraintTop_toBottomOf="@+id/txtTitle"
         app:layout_constraintVertical_bias="0.0"
         tools:itemCount="6"
-        tools:listitem="@layout/editable_transaction_item"/>
+        tools:listitem="@layout/editable_transaction_item" />
+
+    <!-- Include the empty state layout-->
+    <include
+        android:id="@+id/transactionEmptyState"
+        layout="@layout/empty_layout" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
