--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -14,6 +14,10 @@
             android:title="Edit budget"
             android:defaultValue= "0.0"/>
 
+        <Preference
+            android:key="reset_app"
+            android:title="Reset application"/>
+
     </androidx.preference.PreferenceCategory>
 
 </PreferenceScreen>
